plugins {
    alias(libs.plugins.spring.dependency.management)
}

apply plugin: 'war'
apply plugin: 'pmd'

group = 'org.forketyfork'
version = '0.0.1-SNAPSHOT'
description = "rainyhills"

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
}

// adding a separate source set for integration tests
// it should have output of the main and test source sets on its classpath
sourceSets {
    integrationTest {
        java {
            compileClasspath += main.output + test.output
            runtimeClasspath += main.output + test.output
            srcDir file('src/integration-test/java')
        }
        resources.srcDir file('src/integration-test/resources')
    }
}

configurations {
    integrationTestImplementation.extendsFrom testImplementation
    integrationTestRuntimeOnly.extendsFrom testRuntimeOnly
}

dependencies {
    providedCompile libs.jakartaee.api

    testImplementation libs.junit

    integrationTestImplementation libs.weld.junit4
    integrationTestImplementation libs.slf4j.simple
}

task integrationTest(type: Test) {
    testClassesDirs = sourceSets.integrationTest.output.classesDirs
    classpath = sourceSets.integrationTest.runtimeClasspath
    if (JavaVersion.current().isJava9Compatible()) {
        jvmArgs = [
            '--add-opens=java.base/java.lang=ALL-UNNAMED',
            '--add-opens=java.base/java.lang.reflect=ALL-UNNAMED',
            '--add-opens=java.base/java.util=ALL-UNNAMED'
        ]
    }
}

// including the integrationTest task between the test and check tasks in the build cycle
check.dependsOn integrationTest
integrationTest.mustRunAfter test

tasks.withType(Test).configureEach {
    reports.html.outputLocation = file("${reporting.baseDir}/${name}")
    javaLauncher = javaToolchains.launcherFor {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

// logging the test and integrationTest results during the build
test {
    testLogging {
        events "passed", "skipped", "failed"
    }
}

integrationTest {
    testLogging {
        events "passed", "skipped", "failed"
    }
}

war.archiveFileName = "rainyhills.war"

pmd {
    consoleOutput = true
    toolVersion = libs.versions.pmd.get()
    ruleSetFiles = files('pmd-ruleset.xml')
}

// heroku deployment
task stage(dependsOn: ['build', 'clean'])
build.mustRunAfter clean

task copyToTarget(type: Copy) {
    into "target"
    from("$buildDir/libs")
}

stage.dependsOn(copyToTarget)